# micro-wallet

./: .gitignore  .gitmodules  CMakeLists.txt  command.cpp  command.hpp  common.cpp  common.hpp  ecc.cpp  ecc.hpp  serial.hpp  serial_arduino.cpp  storage.cpp  storage.hpp  trng.cpp  trng.hpp  wallet.ino
pc/: main.cpp  serial.cpp
