cmake_minimum_required(VERSION 3.1)
project (Wallet)
set(CMAKE_BUILD_TYPE Release)

macro(use_c99)
  if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
    endif ()
  else ()
    set (CMAKE_C_STANDARD 99)
  endif ()
endmacro(use_c99)

use_c99()
# include_directories(source/micro-ecc)
include_directories(.)
# link_directories(clib)
# add_library(clib.a)
add_executable(Wallet-Simulator pc/main.cpp pc/serial.cpp command.cpp)
# add_executable(XWallet-Connector windows/connector.c com/com.c)
